[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram_view"
version = "1.1.1"
description = "Telegram integration for smart-orchestrator"
authors = [{name = "Ozernoy"}]
dependencies = [
    "aiogram",
    "python-dotenv",
    "gspread",
    "oauth2client",
    "common-utils",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 