[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram_view"
version = "1.3.2"
description = "Telegram integration for agent-orchestrator"
authors = [{name = "Ozernoy"}]
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv",
    "gspread",
    "oauth2client",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 